src/PclSharp.Extern/std/VectorOfByte.generated.h

// Code generated by a template
#pragma once
#include "..\export.h"
#include <vector>


using namespace std;


typedef vector<unsigned char> vectorType;

#ifdef __cplusplus  
extern "C" {  
#endif

EXPORT(vectorType*) std_vector_byte_ctor()
{
	return new vector<unsigned char>();
}

EXPORT(vectorType*) std_vector_byte_ctor_count(int count)
{
	return new vector<unsigned char>(count);
}

EXPORT(void) std_vector_byte_delete(vector<unsigned char>** ptr)
{
	delete *ptr;
	*ptr = NULL;
}

EXPORT(void) std_vector_byte_at(vector<unsigned char>* ptr, size_t idx, unsigned char* value)
{
	*value = ptr->at(idx);
}

EXPORT(size_t) std_vector_byte_size(vector<unsigned char>* ptr)
{
	return ptr->size();
}

EXPORT(void) std_vector_byte_clear(vector<unsigned char>* ptr)
{
	ptr->clear();
}

EXPORT(void) std_vector_byte_resize(vector<unsigned char>* ptr, int32_t size)
{
	ptr->resize(size);
}

EXPORT(void) std_vector_byte_add(vector<unsigned char>* ptr, unsigned char value)
{
		ptr->push_back(value);
}

EXPORT(void) std_vector_byte_insert(vector<unsigned char>* ptr, ptrdiff_t index, unsigned char value)
{
		ptr->insert(ptr->begin()+index, value);
}

EXPORT(unsigned char*) std_vector_byte_data(vector<unsigned char>* ptr)
{
	return ptr->data();
}

#ifdef __cplusplus  
}
#endif